syntax = "proto3";

package nat.pb;

message InviteRequest{
    string FromPeerId   = 1;
    string ToPeerId     = 2;
}

message inviteResponse{
    string peerId       = 2;
    string publicIp     = 3;
    string publicPort   = 4;
    string privateIp    = 5;
    string privatePort  = 6;
}
